Added missing citation and added to frontmatter

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -119,6 +119,16 @@ DOI = {10.3390/rel9020047}
 	year = {1966}
 }
 
+%Philosophical Essays. Edited and translated by Roger Ariew and Daniel Garber. Indianapolis: Hackett, 1989.
+
+@book{Leibniz2,
+	author={Gottfried Wilhelm Leibniz},
+	publisher={Hackett},
+	year={1989},
+	editor={Roger Ariew and Daniel Garber},
+	title={Philosophical Essays}
+}
+
 @book{Augustine1,
 	title = {The Confessions},
 	year = {1990},
