--- a/modthree.tex
+++ b/modthree.tex
@@ -110,7 +110,7 @@ Boiling all of that last paragraph down, if our actions are non-deterministic, t
 Some claim that this is an impossible task. The physical things are physical, the mental things are mental, and never the two shall meet. These folks claim that there can be no causation or interaction between the mental and physical, so by reasoning above, our actions are deterministic (uh-oh). Others claim that there can only be causation going from physical to mental, but not the other way around. This gives us the same problem as before.
 
 \subsubsection{Pre-Established Harmony}
-There is one theory which accepts, whole hog, the idea that there are two kinds of things in the world, mental and physical, and that the two cannot affect each other. This view, put forth by Leibniz,\footnote{references and citation needed} states that a person has two things, a soul and a physical body (a person is composed of a mental substance and a physical substance), but makes three further claims:
+There is one theory which accepts, whole hog, the idea that there are two kinds of things in the world, mental and physical, and that the two cannot affect each other. This view, put forth by Leibniz,\autocite[p. 33]{Leibniz2} states that a person has two things, a soul and a physical body (a person is composed of a mental substance and a physical substance), but makes three further claims:
 \begin{enumerate}
     \item[]No state of a mind can cause a state in another mind or body and no body can cause a state in another body or mind (basically, minds and bodies can't interact, minds and minds can't interact, and bodies and bodies can't interact).
     \item[]Every state of a substance which wasn't a miracle and wasn't its starting state, was caused by the previous state of that substance (basically, how some substance was determines how it will be).
