--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -38,12 +38,21 @@ The primary sources used are, in order:
 
 The two papers by Davis Smith concerning Libertarianism will be merged into one with future editions of this textbook.
 
+\subsubsection{Copyright Status}
+
 This work is licensed under a \href{https://creativecommons.org/licenses/by/4.0/}{Creative Commons Attribution 4.0} license.
 You are free to copy and redistribute the material in any medium or format, and  remix, transform, and build upon the material for any purpose, even commercially, under the following terms:
 \begin{itemize}
 \item You must give appropriate credit, provide a link to the license, and indicate if changes were made. You may do so in any reasonable manner, but not in any way that suggests the licensor endorses you or your use.
 \item You may not apply legal terms or technological measures that legally restrict others from doing anything the license permits.
 \end{itemize}
+
+\subsubsection{Funding}
+
+The production of this work was made possible by Professional Development funds provided by \href{https://www.pierce.ctc.edu/elad}{Pierce College's Employee Learning and Development (ELAD)}. 
+
+
+\includegraphics{marcom-PierceCollege-Logo.png}
 
 
 \bigskip
